[package]
name = "quatredeuxun"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
avian3d = "0.1"
rand = "0.8.5"
log = { version = "*", features = [
  "max_level_debug",
  "release_max_level_warn",
] } # May improve runtime performance

[features]
dev = ["bevy/dynamic_linking", "bevy/file_watcher"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
wildcard_imports = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
type_complexity = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
needless_pass_by_value = "allow"
match_wildcard_for_single_variants = "allow"
single_match = "allow"
used_underscore_binding = "allow"
unnecessary_wraps = "allow"
redundant_closure_for_method_calls = "allow"
naive_bytecount = "allow"


# Dev optimizations

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


# Release optimizations

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"      # Optimize with size in mind (also try "z", sometimes it is better).
strip = "debuginfo"
# also try wasm-opt -Os
